WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209829
[iPadOS] Unable to scrub videos on nba.com
https://bugs.webkit.org/show_bug.cgi?id=209829
Summary
[iPadOS] Unable to scrub videos on nba.com
Antoine Quint
Reported
2020-03-31 13:23:16 PDT
[iPadOS] Unable to scrub videos on nba.com
Attachments
Patch
(1.45 KB, patch)
2020-03-31 13:24 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2020-03-31 13:24:00 PDT
Created
attachment 395085
[details]
Patch
Antoine Quint
Comment 2
2020-03-31 13:24:05 PDT
<
rdar://problem/58804360
>
EWS
Comment 3
2020-03-31 14:29:17 PDT
Committed
r259313
: <
https://trac.webkit.org/changeset/259313
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395085
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug