[iPadOS] Unable to scrub videos on nba.com https://bugs.webkit.org/show_bug.cgi?id=209829 <rdar://problem/58804360>

Patch by Antoine Quint <graouts@apple.com> on 2020-03-31
Reviewed by Dean Jackson.

Opt nba.com into the simulated mouse events dispatch quirk.

* page/Quirks.cpp:
(WebCore::Quirks::shouldDispatchSimulatedMouseEvents const):

Canonical link: https://commits.webkit.org/222746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259313 268f45cc-cd09-0410-ab3c-d52691b4dbfc